# therix-chatbot-test

./: Dockerfile  README.md
.github/workflows/: dev-deploy.yaml  frontend_deploy.yaml
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/api/endpoints/: api.py
backend/app/api/routers/: all_apis.py  template.py
backend/app/core/: constants.py  modules.py
backend/app/models/: agent.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/components/card/: card.component.html  card.component.scss  card.component.ts
frontend/src/app/components/chat-container/: chat-container.component.html  chat-container.component.scss  chat-container.component.ts  smooth_height.component.ts
frontend/src/app/components/input-field/: input-field.component.html  input-field.component.scss  input-field.component.ts
frontend/src/app/components/nav-bar/: nav-bar.component.html  nav-bar.component.scss
frontend/src/app/components/svg-icon/: svg-icon.component.scss  svg-icon.component.ts
frontend/src/app/components/voice-chat-container/: voice-chat-container.component.html  voice-chat-container.component.scss  (+2 more)
frontend/src/app/models/: chat.model.ts
frontend/src/app/services/: chat.service.ts  configuration.service.ts
frontend/src/assets/: configuration.json
frontend/src/environments/: environment.dev.ts  environment.prod.ts  environment.ts
(+9 files in other folders)
